--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
       <h1 class="title">Hello There!</h1>
+      <p>Glad to see you at: </p>
       <p id="currentTime"></p>
       <script src="script.js"></script>
   </body>
