--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
 
         section {
-            max-width: 1100px;
+            max-width: 90wv;
             margin: 50px auto;
             background-color: #fff;
             padding: 40px;
