--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <section>
     <h2>Who Am I?</h2>
     <img src="your-photo.jpg" alt="Jordan's Photo" class="profile-photo">
-    <p>I’m Jordan! Glad to see you at <span id="current-time" class="timestamp"></span>.</p>
-    <p>(Probably) just like you I am an EE major at San Jose State University – class of Fall ‘25. I hope to continue schooling for a Master’s and doctorate degrees; my end goal is to one day make an Analog-based computer to reduce the power usage of AI/ML/LLMs and such.</p>
+    <p>I’m Jordan! Glad to see you at <span id="current-time" class="timestamp"></span>.
+    (Probably) just like you I am an EE major at San Jose State University – class of Fall ‘25. I hope to continue schooling for a Master’s and doctorate degrees; my end goal is to one day make an Analog-based computer to reduce the power usage of AI/ML/LLMs and such.</p>
 
-    <p>I took this over my final spring here and never have I been challenged in a way that I feel is special for a class like this. Sure, trying to understand all of the necessities of a (test) engineer role is a lot, but I never had to re-evaluate the answer of what it meant to be an Electrical Engineer that I told myself back when I first applied to SJSU back in 2022.</p>
-    <p>Going to Advantest and seeing one of my future possible workspaces really opened my eyes and I will be forever grateful for that. (Yeah sadly I had no internships up until that point).</p>
+    <p>I took this over my final spring here and never have I been challenged in a way that I feel is special for a class like this. Sure, trying to understand all of the necessities of a (test) engineer role is a lot, but I never had to re-evaluate the answer of what it meant to be an Electrical Engineer that I told myself back when I first applied to SJSU back in 2022.
+    Going to Advantest and seeing one of my future possible workspaces really opened my eyes and I will be forever grateful for that. (Yeah sadly I had no internships up until that point).</p>
 
     <p>That’s why I made this, a quick reference for you to refresh on the fundamentals (yes fundamentals) of Electrical Engineering that your employers expect from you from day one. Also, by going through this, I hope that leaves less moments where Mr. Kim scolds you for not knowing the “stuff for babies” and more time for the “extremely important stuff”.</p>
   </section>
@@ -30,12 +30,12 @@
 
     <img src="device-process-flow.jpg" alt="Device Process Flow Diagram" class="device-diagram">
 
-    <p><em>If you would like to know more about manufacturing these devices, I’d recommend taking EE/MatE 129.</em></p>
-    <p>Here are my final reports if you’d like to see the outcomes of this class: <a href="#">[1]</a> <a href="#">[2]</a></p>
+    <p><em>If you would like to know more about manufacturing these devices, I’d recommend taking EE/MatE 129.</em>
+    Here are my final reports if you’d like to see the outcomes of this class: <a href="#">[1]</a> <a href="#">[2]</a></p>
 
-    <p>The lectures, by contrast, will focus more on signal processing topics, akin to EE 110/112. That is because knowing what kind of signal to send, transform, receive, whatever is vital for what you are supposed to test.</p>
-    <p>How do you know if your filters work if you cannot even work between time and frequency domain? How do you know if your sampling process does result in garbage? These are the things you need to know at the back of your brain before you even start your work.</p>
-    <p>In fact, intensive signal processing knowledge is what separates us from the computer engineers.</p>
+    <p>The lectures, by contrast, will focus more on signal processing topics, akin to EE 110/112. That is because knowing what kind of signal to send, transform, receive, whatever is vital for what you are supposed to test.
+    How do you know if your filters work if you cannot even work between time and frequency domain? How do you know if your sampling process does result in garbage? These are the things you need to know at the back of your brain before you even start your work.
+    In fact, intensive signal processing knowledge is what separates us from the computer engineers.</p>
   </section>
 
   <script src="script.js"></script>
