--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section>
     <h2>Who Am I?</h2>
-    <img src="your-photo.jpg" alt="Jordan's Photo" class="profile-photo">
+    <img src="IMG_5244.jpeg" alt="Jordan's Photo" class="profile-photo">
     <p>I’m Jordan! Glad to see you at <span id="current-time" class="timestamp"></span>.
     (Probably) just like you I am an EE major at San Jose State University – class of Fall ‘25. I hope to continue schooling for a Master’s and doctorate degrees; my end goal is to one day make an Analog-based computer to reduce the power usage of AI/ML/LLMs and such.</p>
 
