--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
   <header>
-    <h1>Helping You Learn Your ABCs for EE’s</h1>
-    <img src="device-testing-image.jpg" alt="Device Testing Image">
+    <h1>Helping You Learn Your ABCs For EE’s</h1>
+    <img src="maxence-pira-7hR3FrFs4Q0-unsplash.jpg" alt="Device Testing Image">
   </header>
 
   <section>
@@ -28,10 +28,10 @@
     <h2>What is EE 182?</h2>
     <p>This class is officially titled <strong>“Analog and Mixed-Signal IC Test Development”</strong>. What that ultimately means is that this class teaches you the tippy-end of a long and arduous process of creating an integrated circuit. In the labs, you’ll learn how to use automated testing equipment (ATE) to quickly measure the performance of your devices under testing (DUT).</p>
 
-    <img src="device-process-flow.jpg" alt="Device Process Flow Diagram" class="device-diagram">
+    <img src="SupplyChain.png" alt="Device Process Flow Diagram" class="device-diagram">
 
     <p><em>If you would like to know more about manufacturing these devices, I’d recommend taking EE/MatE 129.</em>
-    Here are my final reports if you’d like to see the outcomes of this class: <a href="#">[1]</a> <a href="#">[2]</a></p>
+    Here are my final reports if you’d like to see the outcomes of this class: <a href="https://docs.google.com/document/d/1Ck23nQ1bv5GMRorRXFJvnCn76Mo1hcD-O8znc8dygHs/edit?usp=sharing">[1]</a> <a href="https://docs.google.com/document/d/15g_mM8LHsahbREfYEP-ATp2eSN2SYV-OehPSuf5tcbU/edit?usp=sharing">[2]</a></p>
 
     <p>The lectures, by contrast, will focus more on signal processing topics, akin to EE 110/112. That is because knowing what kind of signal to send, transform, receive, whatever is vital for what you are supposed to test.
     How do you know if your filters work if you cannot even work between time and frequency domain? How do you know if your sampling process does result in garbage? These are the things you need to know at the back of your brain before you even start your work.
