--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 </head>
 <body>
 
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="opamp.html">Op-Amps</a></li>
+      <li><a href="filters.html">Filters</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
   <header>
     <h1>Helping You Learn Your ABCs For EE’s</h1>
     <img src="maxence-pira-7hR3FrFs4Q0-unsplash.jpg" alt="Device Testing Image">
