--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 
   <nav class="navbar">
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="opamp.html">Op-Amps</a></li>
-      <li><a href="filters.html">Filters</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <a href="index.html">Home</a>
+      <a href="pages/opamp.html">Op-Amps</a>
     </ul>
   </nav>
 
