--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -14,6 +14,13 @@
 </head>
 <body>
 
+    <nav class="navbar">
+      <ul>
+        <a href="index.html">Home</a>
+        <a href="pages/opamp.html">Op-Amps</a>
+      </ul>
+    </nav>
+  
   <div class="container">
     <h1>What is an Operational Amplifier?</h1>
 
