--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
   onload="renderMathInElement(document.body);"></script>
-  
+
+  <script src="navbar.js"></script>
 </head>
 <body>
-
-  <nav class="navbar">
-    <ul>
-      <a href="index.html">Home</a>
-      <a href="pages/opamp.html">Op-Amps</a>
-    </ul>
-  </nav>
+  
+  <div id="navbar-container"></div>
 
   <header>
     <h1>Helping You Learn Your ABCs For EE’s</h1>
