--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <nav class="navbar">
   <ul class="navbar-list">
     <li><a href="index.html">Home</a></li>
