--- a/navbar.html
+++ b/navbar.html
@@ -1,10 +1,6 @@
-<link rel="stylesheet" href="styles.css" />
 <nav class="navbar">
   <ul class="navbar-list">
     <li><a href="index.html">Home</a></li>
-    <li><a href="opamp.html">Op-Amps</a></li>
-    <li><a href="filters.html">Filters</a></li>
-    <li><a href="bode.html">Bode Plots</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="pages/opamp.html">Op-Amps</a></li>
   </ul>
 </nav>
