--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -4,22 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>What is an Operational Amplifier</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 
   <!-- KaTeX CDN for LaTeX rendering -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
           onload="renderMathInElement(document.body);"></script>
+
+  <script src="/navbar.js"></script>
+  
 </head>
 <body>
 
-    <nav class="navbar">
-      <ul>
-        <a href="index.html">Home</a>
-        <a href="pages/opamp.html">Op-Amps</a>
-      </ul>
-    </nav>
+  <div id="navbar-container"></div>
   
   <div class="container">
     <h1>What is an Operational Amplifier?</h1>
