--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -1,24 +1,28 @@
+<!-- File: pages/opamp.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>What is an Operational Amplifier</title>
-  <link rel="stylesheet" href="/styles.css">
 
-  <!-- KaTeX CDN for LaTeX rendering -->
+  <!-- ✅ Go UP one level to get to styles.css -->
+  <link rel="stylesheet" href="../styles.css">
+
+  <!-- KaTeX for LaTeX rendering -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
           onload="renderMathInElement(document.body);"></script>
 
-  <script src="/navbar.js"></script>
-  
+  <!-- ✅ Go UP one level to load navbar.js -->
+  <script defer src="../navbar.js"></script>
 </head>
 <body>
 
+  <!-- ✅ This is where navbar.html will be injected -->
   <div id="navbar-container"></div>
-  
+
   <div class="container">
     <h1>What is an Operational Amplifier?</h1>
 
@@ -50,3 +54,4 @@
 
 </body>
 </html>
+
