--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -1,4 +1,3 @@
-<!-- File: pages/opamp.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +6,20 @@
   <title>What is an Operational Amplifier</title>
 
   <link rel="stylesheet" href="../styles.css">
-
-  <!-- KaTeX for LaTeX rendering -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
-          onload="renderMathInElement(document.body);"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      renderMathInElement(document.body, {
+        delimiters: [
+          {left: "\\(", right: "\\)", display: false},
+          {left: "\\[", right: "\\]", display: true}
+        ]
+      });
+    });
+  </script>
 
   <script defer src="../navbar.js"></script>
 </head>
@@ -29,10 +36,10 @@
 
     <h2>Golden Rules of Ideal Op-Amps</h2>
     <ul>
-      <li>Infinite open-loop gain: \\( A_v = \infty \\)</li>
-      <li>Infinite input impedance: \\( i^+ = i^- = 0 \\)</li>
+      <li>Infinite open-loop gain: \( A_v = \infty \)</li>
+      <li>Infinite input impedance: \( i^+ = i^- = 0 \)</li>
       <li>Zero output impedance</li>
-      <li>Zero offset voltage: \\( V^+ = V^- \\)</li>
+      <li>Zero offset voltage: \( V^+ = V^- \)</li>
       <li>Infinite bandwidth</li>
     </ul>
 
@@ -42,7 +49,7 @@
 
     <h2>Common Op-Amp Configurations</h2>
     <ul>
-      <li>Inverting/Non-inverting Amplifiers</li>
+      <li>Inverting / Non-inverting Amplifiers</li>
       <li>Integrators and Differentiators</li>
       <li>Comparators</li>
       <li>Filters (Lowpass / Highpass / Bandpass)</li>
