--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <ul class="navbar-list">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="pages/opamp.html">Op-Amps</a></li>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/pages/opamp.html">Op-Amps</a></li>
   </ul>
 </nav>
