--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
   onload="renderMathInElement(document.body);"></script>
 
-  <script src="navbar.js"></script>
+  <script defer src="navbar.js"></script>
 </head>
 <body>
   
