--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -57,20 +57,32 @@
   <div class="opamp-examples">
 
     <div class="opamp-block">
+      <h3>Inverting Amplifier</h3>
+      <img src="../images/Inverting_amp.png" alt="Inverting Amplifier">
+      <p>Output voltage: \\[ V_{out} = -\frac{R_f}{R_{in}} V_{in} \\]</p>
+    </div>
+
+    <div class="opamp-block">
+      <h3>Non-Inverting Amplifier</h3>
+      <img src="../images/Noninverting_amp.png" alt="Non-Inverting Amplifier">
+      <p>Output voltage: \\[ V_{out} = \left(1 + \frac{R_f}{R_{in}}\right) V_{in} \\]</p>
+    </div>
+
+    <div class="opamp-block">
       <h3>Integrator</h3>
-      <img src="../images/integrator.png" alt="Integrator Circuit">
+      <img src="../images/Integrator.png" alt="Integrator Circuit">
       <p>Output voltage: \\[ V_{out}(t) = -\frac{1}{RC} \int_0^t V_{in}(\tau)\, d\tau \\]</p>
     </div>
 
     <div class="opamp-block">
       <h3>Differentiator</h3>
-      <img src="../images/differentiator.png" alt="Differentiator Circuit">
+      <img src="../images/Differentiator.png" alt="Differentiator Circuit">
       <p>Output voltage: \\[ V_{out}(t) = -RC \frac{dV_{in}(t)}{dt} \\]</p>
     </div>
 
     <div class="opamp-block">
       <h3>Comparator</h3>
-      <img src="../images/comparator.png" alt="Comparator Circuit">
+      <img src="../images/Comparator.png" alt="Comparator Circuit">
       <p>Ideal output: \\[ V_{out} =
         \begin{cases}
           V_{CC} & \text{if } V_+ > V_- \\\\
@@ -81,13 +93,13 @@
 
     <div class="opamp-block">
       <h3>Low-Pass Filter</h3>
-      <img src="../images/lowpass.png" alt="Low Pass Filter">
+      <img src="../images/Low_pass_filter.png" alt="Low Pass Filter">
       <p>Transfer function: \\[ H(s) = \frac{1}{1 + sRC} \\]</p>
     </div>
 
     <div class="opamp-block">
       <h3>High-Pass Filter</h3>
-      <img src="../images/highpass.png" alt="High Pass Filter">
+      <img src="../images/High_pass_filter.png" alt="High Pass Filter">
       <p>Transfer function: \\[ H(s) = \frac{sRC}{1 + sRC} \\]</p>
     </div>
 
@@ -95,3 +107,4 @@
 
 </body>
 </html>
+
