--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -54,56 +54,57 @@
     </ul>
   </div>
 
-  <div class="opamp-examples">
+<div class="opamp-examples">
 
-    <div class="opamp-block">
-      <h3>Inverting Amplifier</h3>
-      <img src="../images/Inverting_amp.png" alt="Inverting Amplifier">
-      <p>Output voltage: \\[ V_{out} = -\frac{R_f}{R_{in}} V_{in} \\]</p>
-    </div>
-
-    <div class="opamp-block">
-      <h3>Non-Inverting Amplifier</h3>
-      <img src="../images/Noninverting_amp.png" alt="Non-Inverting Amplifier">
-      <p>Output voltage: \\[ V_{out} = \left(1 + \frac{R_f}{R_{in}}\right) V_{in} \\]</p>
-    </div>
-
-    <div class="opamp-block">
-      <h3>Integrator</h3>
-      <img src="../images/Integrator.png" alt="Integrator Circuit">
-      <p>Output voltage: \\[ V_{out}(t) = -\frac{1}{RC} \int_0^t V_{in}(\tau)\, d\tau \\]</p>
-    </div>
-
-    <div class="opamp-block">
-      <h3>Differentiator</h3>
-      <img src="../images/Differentiator.png" alt="Differentiator Circuit">
-      <p>Output voltage: \\[ V_{out}(t) = -RC \frac{dV_{in}(t)}{dt} \\]</p>
-    </div>
-
-    <div class="opamp-block">
-      <h3>Comparator</h3>
-      <img src="../images/Comparator.png" alt="Comparator Circuit">
-      <p>Ideal output: \\[ V_{out} =
-        \begin{cases}
-          V_{CC} & \text{if } V_+ > V_- \\\\
-          0 & \text{if } V_+ \leq V_-
-        \end{cases}
-      \\]</p>
-    </div>
-
-    <div class="opamp-block">
-      <h3>Low-Pass Filter</h3>
-      <img src="../images/Low_pass_filter.png" alt="Low Pass Filter">
-      <p>Transfer function: \\[ H(s) = \frac{1}{1 + sRC} \\]</p>
-    </div>
-
-    <div class="opamp-block">
-      <h3>High-Pass Filter</h3>
-      <img src="../images/High_pass_filter.png" alt="High Pass Filter">
-      <p>Transfer function: \\[ H(s) = \frac{sRC}{1 + sRC} \\]</p>
-    </div>
-
+  <div class="opamp-block">
+    <h3>Inverting Amplifier</h3>
+    <img src="../images/inverting.png" alt="Inverting Amplifier">
+    <div>\\[ V_{out} = -\frac{R_f}{R_{in}} V_{in} \\]</div>
   </div>
+
+  <div class="opamp-block">
+    <h3>Non-Inverting Amplifier</h3>
+    <img src="../images/noninverting.png" alt="Non-Inverting Amplifier">
+    <div>\\[ V_{out} = \left(1 + \frac{R_f}{R_{in}} \right) V_{in} \\]</div>
+  </div>
+
+  <div class="opamp-block">
+    <h3>Integrator</h3>
+    <img src="../images/integrator.png" alt="Integrator Circuit">
+    <div>\\[ V_{out}(t) = -\frac{1}{RC} \int_0^t V_{in}(\tau)\, d\tau \\]</div>
+  </div>
+
+  <div class="opamp-block">
+    <h3>Differentiator</h3>
+    <img src="../images/differentiator.png" alt="Differentiator Circuit">
+    <div>\\[ V_{out}(t) = -RC \frac{dV_{in}(t)}{dt} \\]</div>
+  </div>
+
+  <div class="opamp-block">
+    <h3>Comparator</h3>
+    <img src="../images/comparator.png" alt="Comparator Circuit">
+    <div>\\[
+      V_{out} =
+      \begin{cases}
+        V_{CC} & \text{if } V_+ > V_- \\\\
+        0 & \text{if } V_+ \leq V_-
+      \end{cases}
+    \\]</div>
+  </div>
+
+  <div class="opamp-block">
+    <h3>Low-Pass Filter</h3>
+    <img src="../images/lowpass.png" alt="Low Pass Filter">
+    <div>\\[ H(s) = \frac{1}{1 + sRC} \\]</div>
+  </div>
+
+  <div class="opamp-block">
+    <h3>High-Pass Filter</h3>
+    <img src="../images/highpass.png" alt="High Pass Filter">
+    <div>\\[ H(s) = \frac{sRC}{1 + sRC} \\]</div>
+  </div>
+
+</div>
 
 </body>
 </html>
