--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -58,31 +58,31 @@
 
   <div class="opamp-block">
     <h3>Inverting Amplifier</h3>
-    <img src="../images/inverting.png" alt="Inverting Amplifier">
+    <img src="../images/Inverting_amp.png" alt="Inverting Amplifier">
     <div>\\[ V_{out} = -\frac{R_f}{R_{in}} V_{in} \\]</div>
   </div>
 
   <div class="opamp-block">
     <h3>Non-Inverting Amplifier</h3>
-    <img src="../images/noninverting.png" alt="Non-Inverting Amplifier">
+    <img src="../images/Noninverting_amp.png" alt="Non-Inverting Amplifier">
     <div>\\[ V_{out} = \left(1 + \frac{R_f}{R_{in}} \right) V_{in} \\]</div>
   </div>
 
   <div class="opamp-block">
     <h3>Integrator</h3>
-    <img src="../images/integrator.png" alt="Integrator Circuit">
+    <img src="../images/Integrator.png" alt="Integrator Circuit">
     <div>\\[ V_{out}(t) = -\frac{1}{RC} \int_0^t V_{in}(\tau)\, d\tau \\]</div>
   </div>
 
   <div class="opamp-block">
     <h3>Differentiator</h3>
-    <img src="../images/differentiator.png" alt="Differentiator Circuit">
+    <img src="../images/Differentiator.png" alt="Differentiator Circuit">
     <div>\\[ V_{out}(t) = -RC \frac{dV_{in}(t)}{dt} \\]</div>
   </div>
 
   <div class="opamp-block">
     <h3>Comparator</h3>
-    <img src="../images/comparator.png" alt="Comparator Circuit">
+    <img src="../images/Comparator.png" alt="Comparator Circuit">
     <div>\\[
       V_{out} =
       \begin{cases}
@@ -94,13 +94,13 @@
 
   <div class="opamp-block">
     <h3>Low-Pass Filter</h3>
-    <img src="../images/lowpass.png" alt="Low Pass Filter">
+    <img src="../images/Low_pass_filter.png" alt="Low Pass Filter">
     <div>\\[ H(s) = \frac{1}{1 + sRC} \\]</div>
   </div>
 
   <div class="opamp-block">
     <h3>High-Pass Filter</h3>
-    <img src="../images/highpass.png" alt="High Pass Filter">
+    <img src="../images/High_pass_filter.png" alt="High Pass Filter">
     <div>\\[ H(s) = \frac{sRC}{1 + sRC} \\]</div>
   </div>
 
