--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>What is an Operational Amplifier</title>
 
-  <link rel="stylesheet" href="../styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
-  onload="renderMathInElement(document.body, {
-    delimiters: [
-        { left: '\\(', right: '\\)', display: false },
-        { left: '\\[', right: '\\]', display: true }
-      ]
-    });">
-  </script>
+  <link rel="stylesheet" href="../styles.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" />
+
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
+  <script
+    defer
+    src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
+    onload="renderMathInElement(document.body, {delimiters:[{left:'\\\\(',right:'\\\\)',display:false},{left:'\\\\[',right:'\\\\]',display:true}]});"
+  ></script>
+
   <script defer src="../navbar.js"></script>
 </head>
 <body>
@@ -50,71 +50,71 @@
     </ul>
   </div>
 
-<div class="opamp-examples">
+  <div class="opamp-examples">
 
-  <div class="opamp-block">
-    <h3>Inverting Amplifier</h3>
-    <div class="opamp-content">
-      <img src="../images/Inverting_amp.png" alt="Inverting Amplifier">
-      <div>\[ V_{out} = -\frac{R_f}{R_{in}} V_{in} \]</div>
+    <div class="opamp-block">
+      <h3>Inverting Amplifier</h3>
+      <div class="opamp-content">
+        <img src="../images/Inverting_amp.png" alt="Inverting Amplifier" />
+        <div>\[ V_{out} = -\frac{R_f}{R_{in}} V_{in} \]</div>
+      </div>
     </div>
-  </div>
 
-  <div class="opamp-block">
-    <h3>Non-Inverting Amplifier</h3>
-    <div class="opamp-content">
-      <img src="../images/Noninverting_amp.png" alt="Non-Inverting Amplifier">
-      <div>\[ V_{out} = \left(1 + \frac{R_f}{R_{in}} \right) V_{in} \]</div>
+    <div class="opamp-block">
+      <h3>Non-Inverting Amplifier</h3>
+      <div class="opamp-content">
+        <img src="../images/Noninverting_amp.png" alt="Non-Inverting Amplifier" />
+        <div>\[ V_{out} = \left(1 + \frac{R_f}{R_{in}} \right) V_{in} \]</div>
+      </div>
     </div>
-  </div>
 
-  <div class="opamp-block">
-    <h3>Integrator</h3>
-    <div class="opamp-content">
-      <img src="../images/Integrator.png" alt="Integrator Circuit">
-      <div>\[ V_{out}(t) = -\frac{1}{RC} \int_0^t V_{in}(\tau)\, d\tau \]</div>
+    <div class="opamp-block">
+      <h3>Integrator</h3>
+      <div class="opamp-content">
+        <img src="../images/Integrator.png" alt="Integrator Circuit" />
+        <div>\[ V_{out}(t) = -\frac{1}{RC} \int_0^t V_{in}(\tau)\, d\tau \]</div>
+      </div>
     </div>
-  </div>
 
-  <div class="opamp-block">
-    <h3>Differentiator</h3>
-    <div class="opamp-content">
-      <img src="../images/Differentiator.png" alt="Differentiator Circuit">
-      <div>\[ V_{out}(t) = -RC \frac{dV_{in}(t)}{dt} \]</div>
+    <div class="opamp-block">
+      <h3>Differentiator</h3>
+      <div class="opamp-content">
+        <img src="../images/Differentiator.png" alt="Differentiator Circuit" />
+        <div>\[ V_{out}(t) = -RC \frac{dV_{in}(t)}{dt} \]</div>
+      </div>
     </div>
-  </div>
 
-  <div class="opamp-block">
-    <h3>Comparator</h3>
-    <div class="opamp-content">
-      <img src="../images/Comparator.png" alt="Comparator Circuit">
-      <div>\[
-        V_{out} =
-        \begin{cases}
-          V_{CC} & \text{if } V_+ > V_- \\
-          0 & \text{if } V_+ \leq V_-
-        \end{cases}
-      \]</div>
+    <div class="opamp-block">
+      <h3>Comparator</h3>
+      <div class="opamp-content">
+        <img src="../images/Comparator.png" alt="Comparator Circuit" />
+        <div>\[
+          V_{out} =
+          \begin{cases}
+            V_{CC} & \text{if } V_+ > V_- \\
+            0 & \text{if } V_+ \leq V_-
+          \end{cases}
+        \]</div>
+      </div>
     </div>
-  </div>
 
-  <div class="opamp-block">
-    <h3>Low-Pass Filter</h3>
-    <div class="opamp-content">
-      <img src="../images/Low_pass_filter.png" alt="Low Pass Filter">
-      <div>\[ H(s) = \frac{1}{1 + sRC} \]</div>
+    <div class="opamp-block">
+      <h3>Low-Pass Filter</h3>
+      <div class="opamp-content">
+        <img src="../images/Low_pass_filter.png" alt="Low Pass Filter" />
+        <div>\[ H(s) = \frac{1}{1 + sRC} \]</div>
+      </div>
     </div>
-  </div>
 
-  <div class="opamp-block">
-    <h3>High-Pass Filter</h3>
-    <div class="opamp-content">
-      <img src="../images/High_pass_filter.png" alt="High Pass Filter">
-      <div>\[ H(s) = \frac{sRC}{1 + sRC} \]</div>
+    <div class="opamp-block">
+      <h3>High-Pass Filter</h3>
+      <div class="opamp-content">
+        <img src="../images/High_pass_filter.png" alt="High Pass Filter" />
+        <div>\[ H(s) = \frac{sRC}{1 + sRC} \]</div>
+      </div>
     </div>
-  </div>
 
-</div>
+  </div>
 
 </body>
 </html>
