--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -106,5 +106,27 @@
 
   </div>
 
+  <div class="opamp-block">
+  <h3>Non-Inverting Amplifier – Real Example</h3>
+  <div class="opamp-content">
+    <img src="../images/Opamp_example.png" alt="Non-Inverting Amplifier with Values">
+    <div>
+      \[
+      \frac{V_p - 0}{50k} = \frac{V_{\text{out}} - V_p}{30k}
+      \]
+      \[
+      V_{\text{out}} = V_n + 5 \Rightarrow V_p = V_{\text{out}} - 5
+      \]
+      \[
+      \text{Substitute:} \quad \frac{V_{\text{out}} - 5}{50k} = \frac{5}{30k}
+      \]
+      \[
+      V_{\text{out}} = 13.3\,\text{V}
+      \]
+    </div>
+  </div>
+</div>
+
+
 </body>
 </html>
