--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -100,7 +100,7 @@
 
     <div class="opamp-block">
       <h3>High-Pass Filter</h3>
-      <img src="../images/High_pass_filter.png" alt="High Pass Filter">
+      <img src="../images/Highpass_filter.png" alt="High Pass Filter">
       <div>\[ H(s) = \frac{sRC}{1 + sRC} \]</div>
     </div>
 
