--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -100,16 +100,16 @@
 
     <div class="opamp-block">
       <h3>High-Pass Filter</h3>
-      <img src="../images/Highpass_filter.png" alt="High Pass Filter">
+      <img src="../images/High_passfilter.png" alt="High Pass Filter">
       <div>\[ H(s) = \frac{sRC}{1 + sRC} \]</div>
     </div>
 
   </div>
 
-  <div class="opamp-block">
-    <h3>Non-Inverting Amplifier – Real Example</h3>
-  <div class="opamp-content">
-    <img src="../images/Opamp_example.png" alt="Non-Inverting Amplifier with Values">
+<div class="opamp-block" style="text-align: center;">
+  <h3>Non-Inverting Amplifier – Real Example</h3>
+  <div class="opamp-content" style="display: inline-block; text-align: left;">
+    <img src="../images/noninverting_amp_example_labeled.png" alt="Non-Inverting Amplifier with Values" style="max-width: 100%; height: auto;">
     <div>
       \[
       \frac{V_p - 0}{50k} = \frac{V_{\text{out}} - V_p}{30k}
