--- a/pages/opamp.html
+++ b/pages/opamp.html
@@ -109,7 +109,7 @@
 <div class="opamp-block" style="text-align: center;">
   <h3>Non-Inverting Amplifier – Real Example</h3>
   <div class="opamp-content" style="display: inline-block; text-align: left;">
-    <img src="../images/noninverting_amp_example_labeled.png" alt="Non-Inverting Amplifier with Values" style="max-width: 100%; height: auto;">
+    <img src="../images/Opamp_example.png" alt="Non-Inverting Amplifier with Values" style="max-width: 100%; height: auto;">
     <div>
       \[
       \frac{V_p - 0}{50k} = \frac{V_{\text{out}} - V_p}{30k}
