--- a/navbar.html
+++ b/navbar.html
@@ -2,5 +2,6 @@
   <ul class="navbar-list">
     <li><a data-link="index.html">Home</a></li>
     <li><a data-link="pages/opamp.html">Op-Amps</a></li>
+    <li><a data-link="pages/firstorder.html">First-Order Circuits</a></li>
   </ul>
 </nav>
