--- a/pages/firstorder.html
+++ b/pages/firstorder.html
@@ -25,7 +25,7 @@
   <div class="container">
     <h1>First-Order Circuits Review</h1>
 
-    <p>First-order circuits are electrical circuits that contain only one energy storage element — either a capacitor or an inductor — along with resistors and independent sources.</p>
+    <p>First-order circuits are electrical circuits that can be reduced to only one energy storage element — either a capacitor or an inductor — along with resistors and independent sources.</p>
 
     <h2>Types of First-Order Circuits</h2>
     <ul>
